<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addMenu"
        android:title="@string/addItem"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/settingMenu"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/accountMenu"
                android:title="@string/account" />
            <item
                android:id="@+id/appsettingMenu"
                android:title="@string/setting" />
        </menu>
    </item>
    <item
        android:id="@+id/exitMenu"
        android:title="@string/exit"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"></item>
</menu>